<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20"
    android:orientation="vertical"
    tools:context=".telaCadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="87dp"
            android:layout_height="37dp"
            android:layout_margin="5"
            android:text="@string/txt"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGravar"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_margin="5"
            android:layout_weight="1"
            android:text="@string/btnGravar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_margin="5"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/txtCodigo"
                android:textSize="18sp"
                tools:inputType="textPersonName"
                tools:textColor="#040303" />

            <TextView
                android:id="@+id/edtId"
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txtNome" />

            <TextView
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txtTelefone" />

            <TextView
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txtEmail" />

            <TextView
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txtObs" />

            <EditText
                android:id="@+id/edtObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>